styles.css
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

:root {
  --navbar-background: rgb(36, 36, 92);
  --preorder-color: #ff8d6b;
  --preorder-textc: #212529;
}

body {
  height: 100%;
  width: 100%;
  overflow-x: hidden;
  font-family: "Prompt", sans-serif;
  background-color: #f0efed;
}

.banner1 {
  background-image: url(./images/banner1.jpeg);
  background-position: center;
  background-attachment: scroll;
  background-repeat: no-repeat;
  background-size: cover;
  -webkit-backdrop-filter: brightness(500px);
  backdrop-filter: brightness(500px);
  width: 100%;
  height: 104vh;
}

/*Navbar*/
.navbar {
  background-color: var(--navbar-background);
  width: 97.6%;
  height: 8%;
  position: fixed;
  top: 3%;
  left: 1.2%;
  right: 1.2%;
  z-index: 3;
}

.navbar {
  display: flex;
  justify-content: space-between;
  align-items: center;
  background-color: #1f2a5a;
}

.nav-link {
  color: #cbb3a0;
  font-size: 12px;
  word-spacing: 7px;
  margin-left: 1%;
  margin-top: 0.5%;
}

.nav-links {
  display: flex;
  gap: 25px;
  align-items: center;
  justify-content: end;
  color: #cbb3a0;
  font-size: 12px;
  word-spacing: 7px;
  margin-right: 1%;
  width: 55%;
}

.nav-link li {
  list-style: none;
}

.nav-links li {
  list-style: none;
}

.nav-link a {
  color: #cbb3a0;
  text-decoration: none;
  transition: 0.3s;
}

.nav-links a {
  color: #cbb3a0;
  text-decoration: none;
  transition: 0.3s;
}

.nav-link a:hover {
  color: #ff8d6b;
  text-decoration: underline;
  cursor: pointer;
}

.nav-links a:hover {
  color: #ff8d6b;
  text-decoration: underline;
}

#special-nav-hover2:hover {
  color: #fff;
}

#special-nav-hover:hover {
  color: #fff;
}

.dropdown {
  background-color: white;
}

.dropdown:hover {
  color: #1f2a5a;
  display: block;
}

/* HEADER */

header {
  color: #cbb3a0;
  display: flex;
  flex-flow: column nowrap;
  width: 100%;
  height: auto;
  align-items: center;
  justify-content: center;
  text-align: center;
  /* animation-name: banners;
  animation-duration: 0.9s;
  animation-iteration-count: 1;
animation-fill-mode: foward; */
}

.headers {
  z-index: 1;
  margin-top: 17.6%;
  font-size: 55px;
  font-weight: 100px;
  line-height: 110%;
}

.heading{
    font-size: 23px;
    line-height: 275%;
}

.button-down {
  margin-top: 14%;
  display: block;
}

.button-down:hover{
  color: white;
  transform: translate(1.15);
  transition: 1s;
}

/*BODY*/

.row1 {
  display: flex;
  flex-flow: row nowrap;
  justify-content: center;
  margin-top: 2%;
  margin: 1% 8.55%;
  width: 82.9%;
  height: auto;
}

.row1 section {
  width: 49%;
  height: 64vh;
  margin: 0% 0.5%;
}

.row1 section:first-child {
  margin-left: 0%;
}

.row1 section:last-child {
  margin-right: 0%;
}

.row1 section {
  display: flex;
  flex-flow: column nowrap;
  align-items: center;
  width: 100%;
  height: 65vh;
}

.row1 section:hover {
  cursor: pointer;
}

.row1 section .img1 {
  cursor: pointer;
  height: 85%;
  width: 100%;
  position: relative;
}

.frontimage {
  opacity: 1;
}

.backimage {
  position: absolute;
  top: 0px;
  right: 0px;
  z-index: -1;
  opacity: 1;
}

.size-problems {
  overflow: hidden;
}

.pre-order {
  position: absolute;
  top: 5%;
  right: 0px;
  font-size: 0.72rem;
  padding: 6px 17px;
  background-color: var(--preorder-color);
  color: var(--preorder-textc);
  /* width:25%;
  height:10%; */
}

.frontimage:hover {
  opacity: 0;
  transition-duration: 0.25s;
  transition-timing-function: linear;
}

.row1 section .text {
  cursor: pointer;
  padding-top: 1.5%;
  height: 15%;
  width: 100%;
  display: flex;
  flex-flow: row nowrap;
  justify-content: space-between;
}

.text p {
  color: var(--navbar-background);
}

.text:hover p {
  cursor: pointer;
  color: black;
}

.text .soldout {
  cursor: pointer;
  color: grey !important;
}

.row2 section {
  margin: 1% 8.55%;
  width: 82.9%;
  height: 80vh;
}

.row2 section .img2 {
  cursor: pointer;
  height: 85%;
  width: 100%;
  position: relative;
}

.img2-prblm5-1 {
  position: absolute;
  top: -32%;
}
.img2-prblm5-2 {
  transform: scaleX(1.1) scaleY(1.35);
}

.row2 section .text2 {
  cursor: pointer;
  padding-top: 1.5%;
  height: 15%;
  width: 100%;
  display: flex;
  flex-flow: row nowrap;
  justify-content: space-between;
}

.text2 p:first-child {
  color: var(--navbar-background);
}

.text2:hover p {
  cursor: pointer;
  color: black;
}

.text2 .soldout {
  cursor: pointer;
  color: grey !important;
}

.banner2 {
  width: 100%;
  height: 79vh;
  background-image: url(./images/banner2.png);
  background-position: center;
  background-attachment: scroll;
  background-repeat: no-repeat;
  background-size: cover;
}

.row3 {
  display: flex;
  flex-flow: row wrap;
  justify-content: space-evenly;
  margin: 2% 6.55%;
  width: 82.9%;
  height: auto;
}

.row3 section {
  display: flex;
  flex-flow: column nowrap;
  align-items: center;
  margin: 3% 2%;
  width: 25%;
}

/* .row3 section:first-child {
  margin-left: 0%;
}

.row3 section:last-child {
  margin-right: 0%;
} */

.row3 section .img3 {
  cursor: pointer;
  height: 85%;
  width: 100%;
  position: relative;
}

.img3-prblm6-2 {
  left: -37.5%;
}

.row3 section .text3 {
  cursor: pointer;
  padding-top: 1.5%;
  height: 15%;
  width: 100%;
  display: flex;
  flex-flow: row nowrap;
  justify-content: space-between;
}

.text3 p:first-child {
  color: var(--navbar-background);
}

.soldout,
.price {
  color: grey;
}

.text3:hover p {
  cursor: pointer;
  color: black;
}

.text3 .soldout {
  cursor: pointer;
  color: grey !important;
}

.soldout:hover {
  cursor: pointer;
  color: grey;
}

footer {
  display: flex;
  flex-flow: row wrap;
  align-items: flex-start;
  justify-content: space-evenly;
  background-color: #1f2a5a;
  color: #efc2b3;
  width: 100%;
  font-size: 13.5px;
  height: 50.7vh;
}

footer div {
  margin-top: 3.25%;
  padding:0% 23px;
}

footer ul {
  list-style-type: none;
}

footer li {
  line-height: 200%;
}

.subscribe2{
   line-height: 100% !important;
}

footer a {
  text-decoration: none;
  color: #efc2b3;
}

footer a:hover {
  color: #ff8d6b;
  text-decoration: underline;
}

footer h3 {
  margin-bottom: 24%;
}

footer h3{
  margin-bottom: 4.5%;
  font-size: 12px;
  letter-spacing: 1px;
}

footer div h3{
   margin-bottom: 9%;
}

footer div h3[class="subscribe"]{
   margin-bottom: 3.3%;
}

.f5 .subscribed {
    display: flex;
    flex-flow: row nowrap;
    justify-content: space-between;
   width: 100%;
   padding: 0px;
   }

.f5 input {
  padding:  5.5px 5.5px 5.5px 0px;
  border: 1px solid #efc2b3;
  background: transparent;
  color: white;
  width: 180px;
  border-radius: 0px;
}

.f5 input::placeholder{
  color:#fff;
   font-family: "Prompt", sans-serif;
   opacity: 0.6;
}

.f5 button {
  display: inline-block;
  width: 100%;
  padding: 6px 28px 8px;
  background-color: #b4aaa7;
  border: none;
  cursor: pointer;
  font-weight: bolder;
  font-size: 11px;
  border-radius: 29px;
}

.icons {
  margin: 0% 4% 0% 0%;
  margin-top: 4%;
}

.icon2{
  margin-top: 3.7%;
} 
/* 
@keyframes banners {
  0%{
    background-color: darkslategray;}
    100%{
  background-image: url(./images/banner1.jpeg);
  background-position: center;
  background-attachment: scroll;
  background-repeat: no-repeat;
  background-size: cover;
    }
  } */

@media screen and (max-width:990px){
/* ROW 1 BODY STYLING */
.row1{
  margin:1% auto;
  width: 668.25px;
}

.row3 section {
  width:30%;
}

  /* FOOTER STYLING */
  footer{
    height:90vh;
  }

  footer div{
    padding-right: 150px;
  }

   .f1{order:1;}

   .f2{order:3;}

   .f3{order:4;}

   .f4{order:5;}

   .f5{order:2;}

   .n1, .n2, .n3, .n4{

   display: none;
}
}

@media screen and (max-width:830px){

    footer div{
    padding-right: 100px;
  }
}

@media screen and (max-width:830px){
.row1{
  flex-flow: column nowrap;
   margin:1% auto;
  width: 565px;}
}


@media screen and (max-width:750px){

  .row3 section {
  width:100%;
}
}

@media screen and (max-width:700px){

    footer div{
    padding-right: 50px;
  }
}

@media screen and (max-width:600px){

    footer div{
    padding-right: 35px;
  }
}


@media screen and (max-width:575px){

  .row1{
  flex-flow: column nowrap;
   margin: 1% auto;
  width: 92%;};

   .f1{order:2;}

   .f2{order:3;}

   .f3{order:4;}

   .f4{order:5;}

   .f5{order:0 !important;}

    footer div{
    padding-right: 65px;
  }

   footer{
    height:110vh;
  }
}

@media screen and (max-width:400px){

    footer div{
    padding-right: 28px;
  }
}

